agregando nueva rama

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <main>
         <section>
             <h1>Aprendien GIt y Github</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore cumque reprehenderit id laboriosam. Vitae, ea quis incidunt veniam earum commodi reprehenderit hic officiis laudantium, velit voluptate officia, repellat molestias voluptatem.</p>
         </section>
     </main>
 </body>
